[package]
name = "console-courier"
version = "0.1.0"
edition = "2021"

[dependencies]
cliclr = "0.1.2"
dialoguer = "0.11.0"
rfd = "0.14.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }